refactor(backend): managed CORS errors from frontend